--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,7 +4,7 @@
   color: #000;
   padding: 0.2em 0;
 }
-
+@import "variables.scss";
 body {
   padding: 0;
 }
@@ -16,7 +16,17 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
-
+.logo {
+  background-image: url(../images/Marvel_Comics_logo.png);
+  width: 140px;
+  height: 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin: 6px 0 0 19px;
+}
+nav {
+  background: gray !important;;
+}
 /* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
