--- a/app/styles/CMA.css
+++ b/app/styles/CMA.css
@@ -1,5 +1,5 @@
 nav {
-  background: gray !important; }
+  background: #212121 !important; }
 
 .logo {
   background-image: url(../images/Marvel_Comics_logo.png);
