--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="grey-darken">
    <div class="nav-wrapper">
      <a href="#" class="brand-logo"><div class="logo">
      </div></a>
