--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,135 @@
 <nav class="grey-darken">
    <div class="nav-wrapper">
-     <a href="#" class="brand-logo"><div class="logo">
-     </div></a>
+     <div class="row">
+       <div class="col s3">
+         <a href="#" class="brand-logo"><div class="logo">
+         </div></a>
+       </div>
+       <div class="input-field col s6">
+          <input placeholder="Search" id="first_name" type="text" class="validate input-search">
+          <i class="material-icons prefix">search</i>
+        </div>
+       <div class="col s3">
+       </div>
+     </div>
+      </div>
    </div>
  </nav>
+ <div class="row">
+   <div class="col s9">
+     <div class="row container-filter--character">
+       <div class="col s3">
+         <i class="icon"></i><h4>Characters</h4>
+       </div>
+       <div class="col s6">
+       </div>
+       <div class="col s3">
+         <div class="input-field col s12">
+           <select>
+             <option value="" disabled selected>Sort by</option>
+             <option value="1">Option 1</option>
+             <option value="2">Option 2</option>
+             <option value="3">Option 3</option>
+           </select>
+         </div>
+       </div>
+     </div>
+    <div class="row">
+      <div class="row">
+      </div>
+      <div class="row">
+      </div>
+      <div class="col s1">
+      </div>
+      <div class="col s5 container-card--character">
+        <div class="container-circule--image">
+        </div>
+        <div class="container-text--descrition">
+          <h4>Heroe</h4>
+          <p>
+            Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500.
+          </p>
+            <a class="waves-effect waves-light btn red button-size">VIEW MORE</a>
+        </div>
+        <div class="container-text-relatedComics">
+          <h5>Related Comics</h5>
+          <p>Lorem Ipsum</p>
+          <p>Lorem Ipsum</p>
+          <p>Lorem Ipsum</p>
+          <p>Lorem Ipsum</p>
+
+        </div>
+      </div>
+      <div class="col s1">
+      </div>
+      <div class="col s5 container-card--character" >
+       <div class="container-circule--image">
+
+       </div>
+       <div class="container-text--descrition">
+         <h4>Heroe</h4>
+         <p>
+           Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500.
+         </p>
+         <a class="waves-effect waves-light btn red button-size">VIEW MORE</a>
+       </div>
+       <div class="container-text-relatedComics">
+         <h5>Related Comics</h5>
+         <p>Lorem Ipsum</p>
+         <p>Lorem Ipsum</p>
+         <p>Lorem Ipsum</p>
+         <p>Lorem Ipsum</p>
+       </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="row">
+      </div>
+      <div class="row">
+      </div>
+      <div class="col s1">
+      </div>
+      <div class="col s5 container-card--character">
+        <div class="container-circule--image">
+        </div>
+        <div class="container-text--descrition">
+          <h4>Heroe</h4>
+          <p>
+            Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500.
+          </p>
+            <a class="waves-effect waves-light btn red button-size">VIEW MORE</a>
+        </div>
+        <div class="container-text-relatedComics">
+          <h5>Related Comics</h5>
+          <p>Lorem Ipsum</p>
+          <p>Lorem Ipsum</p>
+          <p>Lorem Ipsum</p>
+          <p>Lorem Ipsum</p>
+
+        </div>
+      </div>
+      <div class="col s1">
+      </div>
+      <div class="col s5 container-card--character">
+       <div class="container-circule--image">
+       </div>
+       <div class="container-text--descrition">
+         <h4>Heroe</h4>
+         <p>
+           Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500.
+         </p>
+         <a class="waves-effect waves-light btn red button-size">VIEW MORE</a>
+       </div>
+       <div class="container-text-relatedComics">
+         <h5>Related Comics</h5>
+         <p>Lorem Ipsum</p>
+         <p>Lorem Ipsum</p>
+         <p>Lorem Ipsum</p>
+         <p>Lorem Ipsum</p>
+       </div>
+      </div>
+    </div>
+  </div>
+   <div class="col s3 container-favorite">
+   </div>
+ </div>
