--- a/scss/base/variables.scss
+++ b/scss/base/variables.scss
@@ -1,1 +1,6 @@
-$gray-dark: #212121;
+$gray-dark: #2d2727;
+$gray-ligth: #f4f4f4;
+$gray-semi-ligth: #ebebeb;
+$gray: #786e6f;
+$red: #ec1d23;
+$white: #fff;
