--- a/scss/element/container-items.scss
+++ b/scss/element/container-items.scss
@@ -2,19 +2,23 @@
     h4 {
       margin: 0;
       font-weight: 500;
+      color: $gray-dark;
     }
     p {
     font-size: 12px;
     margin: 0px 6px;
+    color: $gray;
     }
 }
 .container-text-relatedComics {
   h5{
       margin: 22px 0 0 0px;
+      color: $gray;
   }
   p {
       font-size: 12px;
       float: left;
       margin: 13px 50px 0 0;
+      color: $gray;
   }
 }
