--- a/app/styles/CMA.css
+++ b/app/styles/CMA.css
@@ -27,7 +27,12 @@ body {
 
 .container-card--character {
   height: 320px;
-  background: white; }
+  background: white;
+  margin: 23px 0 0 0;
+  width: 310px;
+  float: left;
+  margin: 25px 0 30px 57px;
+  padding: 0px 13px; }
 
 .container-filter--character {
   height: 61px; }
@@ -50,17 +55,21 @@ nav {
 
 .container-text--descrition h4 {
   margin: 0;
-  font-weight: 500; }
+  font-weight: 500;
+  color: #2d2727; }
 .container-text--descrition p {
   font-size: 12px;
-  margin: 0px 6px; }
+  margin: 0px 6px;
+  color: #786e6f; }
 
 .container-text-relatedComics h5 {
-  margin: 22px 0 0 0px; }
+  margin: 22px 0 0 0px;
+  color: #786e6f; }
 .container-text-relatedComics p {
   font-size: 12px;
   float: left;
-  margin: 13px 50px 0 0; }
+  margin: 13px 50px 0 0;
+  color: #786e6f; }
 
 .logo {
   background-image: url(../images/Marvel_Comics_logo.png);
