--- a/scss/element/container-items.scss
+++ b/scss/element/container-items.scss
@@ -22,3 +22,11 @@
       color: $gray;
   }
 }
+.container-favorite{
+  p{
+    color: $gray-dark;
+    font-size: 26px;
+    margin: 16px 0 0 0;
+    font-weight: 500;
+  }
+}
