--- a/app/views/main.html
+++ b/app/views/main.html
@@ -18,10 +18,12 @@
  <div class="row">
    <div class="col s9">
      <div class="row container-filter--character">
-       <div class="col s3">
-         <i class="icon"></i><h4>Characters</h4>
+       <div class="col s4">
+         <div class="container-flex">
+           <i class="icon characters"></i><h4>Characters</h4>
+         </div>
        </div>
-       <div class="col s6">
+       <div class="col s5">
        </div>
        <div class="col s3">
          <div class="input-field col s12">
@@ -117,5 +119,22 @@
     </div>
   </div>
    <div class="col s3 container-favorite">
+     <i class="icon favorite"></i><p>My Favorites</p>
    </div>
  </div>
+<footer class="page-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+      </div>
+      <div class="col l4 offset-l2 s12">
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright ">
+    <div class="container">
+      © Grability Todos los Derechos Reservados
+      <a class="icon logo-grability text-lighten-4 right" href="#!"></a>
+    </div>
+  </div>
+</footer>
