--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,7 +15,7 @@
       </div>
    </div>
  </nav>
- <div class="row">
+ <div class="row no-margins">
    <div class="col s9">
      <div class="row container-filter--character">
        <div class="col s4">
