--- a/app/views/main.html
+++ b/app/views/main.html
@@ -133,7 +133,7 @@
   </div>
   <div class="footer-copyright ">
     <div class="container">
-      © Grability Todos los Derechos Reservados
+      <p class="footer-paragraph">Grability 2017 - Todos los Derechos Reservados</p>
       <a class="icon logo-grability text-lighten-4 right" href="#!"></a>
     </div>
   </div>
