--- a/scss/block/containers.scss
+++ b/scss/block/containers.scss
@@ -11,15 +11,18 @@ footer{
     height: 180px;
     border-radius: 50%;
     background: black;
+    background-repeat: no-repeat;
+    background-size: cover;
     position: relative;
     right: 63px;
     bottom: 30px;
 }
 .container-text--descrition {
     position: relative;
-    bottom: 200px;
+    bottom: 193px;
     left: 120px;
     width: 172px;
+    height: 190px;
     text-align: justify;
 }
 .container-text-relatedComics {
@@ -33,7 +36,7 @@ footer{
   padding: 0 0.75rem 100% 0.75rem !important;
 }
 .container-card--character{
-  height: 320px;
+  height: 340px;
   background: white;
   margin: 23px 0 0 0;
   width: 310px;
