--- a/app/styles/CMA.css
+++ b/app/styles/CMA.css
@@ -27,7 +27,9 @@ footer {
 
 .container-text-relatedComics {
   position: relative;
-  bottom: 196px; }
+  bottom: 196px;
+  right: 14px;
+  width: 311px; }
 
 .container-favorite {
   min-height: 100% !important;
@@ -80,17 +82,19 @@ nav {
   color: #2d2727; }
 .container-text--descrition p {
   font-size: 12px;
-  margin: 0px 6px;
+  margin: 8px 6px 0;
   color: #786e6f; }
 
 .container-text-relatedComics h5 {
-  margin: 22px 0 0 0px;
+  margin: 22px 0 0 11px;
   color: #786e6f; }
 .container-text-relatedComics p {
   font-size: 12px;
   float: left;
-  margin: 13px 50px 0 0;
-  color: #786e6f; }
+  margin: 13px 0 0 0;
+  color: #786e6f;
+  width: 155px;
+  padding: 0 0 0 11px; }
 
 .container-favorite p {
   color: #2d2727;
