--- a/scss/block/inputs.scss
+++ b/scss/block/inputs.scss
@@ -3,6 +3,5 @@
     height: 31px !important;
     color: red !important;
     border-color: red !important;
-    width: 420px !important;
-    padding-right: 2rem !Important;
+    width: 97% !important;
 }
