--- a/scss/element/container-items.scss
+++ b/scss/element/container-items.scss
@@ -9,6 +9,7 @@
       font-size: 12px;
       margin: 8px 6px 0;
       color: $gray;
+      height: 88px;
     }
 }
 .container-text-relatedComics {
