--- a/app/styles/CMA.css
+++ b/app/styles/CMA.css
@@ -41,7 +41,7 @@ footer {
   height: 340px;
   background: white;
   margin: 23px 0 0 0;
-  width: 310px;
+  width: 40%;
   float: left;
   margin: 25px 0 30px 57px;
   padding: 0px 13px; }
@@ -59,6 +59,10 @@ footer {
   height: 100% !important;
   padding: 13px 0; }
 
+.container-center {
+  display: table;
+  margin: 0 auto; }
+
 nav {
   background: #2d2727 !important; }
 
@@ -67,8 +71,7 @@ nav {
   height: 31px !important;
   color: red !important;
   border-color: red !important;
-  width: 420px !important;
-  padding-right: 2rem !Important; }
+  width: 97% !important; }
 
 .button-size {
   width: 105px;
@@ -83,7 +86,8 @@ nav {
 .container-text--descrition p {
   font-size: 12px;
   margin: 8px 6px 0;
-  color: #786e6f; }
+  color: #786e6f;
+  height: 88px; }
 
 .container-text-relatedComics h5 {
   margin: 22px 0 0 11px;
