--- a/app/views/main.html
+++ b/app/views/main.html
@@ -61,12 +61,8 @@
           <ul class="pagination">
             <li><button class="btn-pagination" ng-disabled='currentPage == 0' ng-click='currentPage = currentPage - 1'  ng-click='currentPage = currentPage - 1'><i class="material-icons">chevron_left</i></button></li>
             <li  ng-repeat='page in pages'><button class="btn-pagination" ng-disabled='currentPage == page.no - 1' ng-click='setPage(page.no)' >{{page.no}}</button></li>
-            <li><button class="btn-pagination" ng-disabled='currentPage == page.no + 1' ng-click='currentPage = currentPage + 1'><i class="material-icons">chevron_right</i></button></li>
+            <li><button class="btn-pagination" ng-disabled='currentPage >= characters.length/pageSize - 1' ng-click='currentPage = currentPage + 1'><i class="material-icons">chevron_right</i></button></li>
           </ul>
-
-          <!-- <button type='button' ng-disabled='currentPage == 0' ng-click='currentPage = currentPage - 1'>&laquo;</button>
-          <button type='button' ng-disabled='currentPage == page.no - 1' ng-click='setPage(page.no)' ng-repeat='page in pages'>{{page.no}}</button>
-          <button type='button' ng-disabled='currentPage == page.no + 1' ng-click='currentPage = currentPage + 1'>&raquo;</button> -->
         </div>
       </div>
     </div>
