--- a/app/views/main.html
+++ b/app/views/main.html
@@ -67,7 +67,14 @@
       </div>
     </div>
    <div class="col s3 container-favorite">
-     <i class="icon favorite"></i><p>My Favorites</p>
+     <div class="container-favorite--title">
+       <i class="icon favorite"></i><p>My Favorites</p>
+     </div>
+     <div class="container-comics--favorite">
+        <div class="comics-read">
+        </div>
+        <p>Comics title</p>
+     </div>
   </div>
    </div>
  </div>
