--- a/scss/element/icons.scss
+++ b/scss/element/icons.scss
@@ -31,6 +31,7 @@ i.material-icons.prefix.active {
   width: 41px;
   height: 42px;
   margin-right: 9px;
+  margin-top: 0;
 }
 .logo-grability {
   background-image: url(../images/grability-logo.png);
