--- a/scss/block/containers.scss
+++ b/scss/block/containers.scss
@@ -64,3 +64,17 @@ footer{
   display: table;
   margin: 0 auto;
 }
+.container-favorite--title {
+    margin-left: 3%;
+}
+.container-comics--favorite {
+    position: relative;
+    height: 400px;
+    top: 19px;
+}
+.comics-read {
+    background: black;
+    width: 80%;
+    height: 80%;
+    margin-left: 35px;
+}
