--- a/scss/element/container-items.scss
+++ b/scss/element/container-items.scss
@@ -39,3 +39,14 @@
     float: left;
     font-weight: 500;
 }
+.container-comics--favorite {
+    .comics-read {
+        background: black;
+        width: 80%;
+        height: 80%;
+        margin-left: 35px;
+    }
+    p {
+      
+    }
+}
