--- a/scss/block/containers.scss
+++ b/scss/block/containers.scss
@@ -71,6 +71,7 @@ footer{
     position: relative;
     height: 400px;
     top: 19px;
+    margin-bottom: 20px;
 }
 .comics-read {
     background: black;
