--- a/app/styles/CMA.css
+++ b/app/styles/CMA.css
@@ -78,6 +78,30 @@ footer {
   height: 80%;
   margin-left: 35px; }
 
+.modal-content {
+  padding: 0 !important;
+  height: 300px; }
+
+.btn-close--modal {
+  float: right;
+  border-radius: 50%;
+  background: black;
+  width: 30px;
+  height: 30px;
+  color: white;
+  padding: 0px 0 0 5px;
+  line-height: 30px;
+  margin: 6px 8px 0 0; }
+
+.container-modal--content {
+  position: relative;
+  top: 41px;
+  height: 209px; }
+
+.container-button--modal {
+  width: 100%;
+  height: 60px; }
+
 nav {
   background: #2d2727 !important; }
 
@@ -94,6 +118,13 @@ ul.pagination {
 
 li.waves-effect {
   height: 40px; }
+
+a.item.item-avatar {
+  border: none;
+  padding-left: 140px; }
+
+.item-avatar img {
+  left: 87px !important; }
 
 .button-size {
   width: 105px;
@@ -155,6 +186,29 @@ button[disabled], html input[disabled] {
   height: 80%;
   margin-left: 35px; }
 
+.container-modal--content .comics-view {
+  height: 250px;
+  width: 190px;
+  float: left;
+  margin: 0 27px;
+  background: black; }
+.container-modal--content p {
+  color: #786e6f; }
+
+.container-button--modal .btn-modal {
+  width: 50%;
+  float: left;
+  height: 100%;
+  border: none;
+  color: red;
+  font-weight: bold; }
+.container-button--modal .btn-modal:focus {
+  background: #2d2727 !important; }
+.container-button--modal .btn-add {
+  background: #ecebeb; }
+  .container-button--modal .btn-add p {
+    color: black; }
+
 .logo {
   background-image: url(../images/Marvel_Comics_logo.png);
   width: 140px;
@@ -189,6 +243,23 @@ i.material-icons.prefix.active {
   height: 42px;
   margin-right: 9px;
   margin-top: 0; }
+
+.favorite-black {
+  background-image: url(../icons/btn-favourites-default.png);
+  width: 41px;
+  height: 42px;
+  position: relative;
+  bottom: 7px;
+  left: 56px; }
+
+.shopping {
+  background-image: url(../icons/shopping-cart-primary.png);
+  width: 41px;
+  height: 42px;
+  position: relative;
+  bottom: 7px;
+  left: 90px;
+  border-radius: 50%; }
 
 .logo-grability {
   background-image: url(../images/grability-logo.png);
