--- a/scss/block/containers.scss
+++ b/scss/block/containers.scss
@@ -79,3 +79,27 @@ footer{
     height: 80%;
     margin-left: 35px;
 }
+.modal-content {
+    padding: 0 !important;
+    height: 300px;
+}
+.btn-close--modal {
+    float: right;
+    border-radius: 50%;
+    background: black;
+    width: 30px;
+    height: 30px;
+    color: white;
+    padding: 0px 0 0 5px;
+    line-height: 30px;
+    margin: 6px 8px 0 0;
+}
+.container-modal--content {
+    position: relative;
+    top: 41px;
+    height: 209px;
+}
+.container-button--modal {
+    width: 100%;
+    height: 60px;
+}
