--- a/scss/element/icons.scss
+++ b/scss/element/icons.scss
@@ -33,6 +33,23 @@ i.material-icons.prefix.active {
   margin-right: 9px;
   margin-top: 0;
 }
+.favorite-black{
+  background-image: url(../icons/btn-favourites-default.png);
+  width: 41px;
+  height: 42px;
+  position: relative;
+  bottom: 7px;
+  left: 56px;
+}
+.shopping{
+  background-image: url(../icons/shopping-cart-primary.png);
+  width: 41px;
+  height: 42px;
+  position: relative;
+  bottom: 7px;
+  left: 90px;
+  border-radius: 50%;
+}
 .logo-grability {
   background-image: url(../images/grability-logo.png);
   width: 50px;
