--- a/app/views/home.html
+++ b/app/views/home.html
@@ -43,7 +43,7 @@
           <h4>{{character.name}}</h4>
           <p ng-show="character.description">{{character.description | limitTo: 120}}</p>
           <p ng-hide="character.description">The hero no have Description</p>
-          <a class="waves-effect waves-light btn red button-size" ng-href="#demoModal" ng-click="main_variable(character.id)" modal>VIEW MORE</a>
+          <a class="waves-effect waves-light btn red button-size" href="#demoModal{{character.id}}" modal>VIEW MORE</a>
 
 
         </div>
@@ -97,21 +97,22 @@
 </footer>
 <!-- Modal Structure -->
 <div id="demoModal" class="modal">
-    <div class="modal-content">
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat btn-close--modal" ng-click="main_variable(0)"> <i class="material-icons">close</i></a>
-        <div class="container-modal--content">
-          <div class="comics-view" style="background-image: url({{characterComics.thumbnail.path}}/portrait_fantastic.jpg);"></div>
-          <h4>{{characterComics.title}}</h4>
-          <h4 ng-show="characterCs == 0">Hero unavailable</h4>
-          <p>{{characterComics.description}}</p>
+  <div class="modal-content">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat btn-close--modal"> <i class="material-icons">close</i></a>
+      <div class="container-modal--content">
+        <div class="comics-view">
+
         </div>
-    </div>
-    <div class="container-button--modal">
-      <button type="button" name="button" class="btn-modal btn-add"><i class="icon favorite-black"></i> <p>
-        ADDED TO FAVORITES
-      </p></button>
-      <button type="button" name="button" class="btn-modal btn-buy"><i class="icon shopping"></i><p>
-        BUY FOR {{characterComics.prices[0].price}}
-      </p></button>
-    </div>
+        <h4>hola</h4>
+        <p>A bunch of text</p>
+      </div>
+  </div>
+  <div class="container-button--modal">
+    <button type="button" name="button" class="btn-modal btn-add"><i class="icon favorite-black"></i> <p>
+      ADDED TO FAVORITES
+    </p></button>
+    <button type="button" name="button" class="btn-modal btn-buy"><i class="icon shopping"></i><p>
+      BUY FOR $3.0
+    </p></button>
+  </div>
 </div>
