--- a/scss/element/container-items.scss
+++ b/scss/element/container-items.scss
@@ -45,6 +45,8 @@
         width: 80%;
         height: 80%;
         margin-left: 35px;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
     p {
 
