--- a/scss/block/containers.scss
+++ b/scss/block/containers.scss
@@ -21,7 +21,7 @@ footer{
     position: relative;
     bottom: 193px;
     left: 120px;
-    width: 172px;
+    width: 69%;
     height: 190px;
     text-align: justify;
 }
@@ -71,7 +71,7 @@ footer{
     position: relative;
     height: 400px;
     top: 19px;
-    margin-bottom: 20px;
+    margin-bottom: 70px;
 }
 .comics-read {
     background: black;
