--- a/scss/element/buttons.scss
+++ b/scss/element/buttons.scss
@@ -1,7 +1,9 @@
 .button-size {
     width: 105px;
     padding: 0;
-    margin-top: 14px;
+    position: absolute;
+    bottom: 42px;
+    left: 150px;
 }
 .btn-pagination {
     background: white;
