--- a/app/styles/CMA.css
+++ b/app/styles/CMA.css
@@ -21,7 +21,7 @@ footer {
   position: relative;
   bottom: 193px;
   left: 120px;
-  width: 172px;
+  width: 69%;
   height: 190px;
   text-align: justify; }
 
@@ -70,7 +70,7 @@ footer {
   position: relative;
   height: 400px;
   top: 19px;
-  margin-bottom: 20px; }
+  margin-bottom: 70px; }
 
 .comics-read {
   background: black;
@@ -129,7 +129,9 @@ a.item.item-avatar {
 .button-size {
   width: 105px;
   padding: 0;
-  margin-top: 14px; }
+  position: absolute;
+  bottom: 42px;
+  left: 150px; }
 
 .btn-pagination {
   background: white;
@@ -156,7 +158,8 @@ button[disabled], html input[disabled] {
   font-size: 12px;
   margin: 8px 6px 0;
   color: #786e6f;
-  height: 88px; }
+  height: 88px;
+  padding: 0 10px; }
 
 .container-text-relatedComics h5 {
   margin: 22px 0 0 11px;
@@ -253,18 +256,16 @@ i.material-icons.prefix.active {
   background-image: url(../icons/btn-favourites-default.png);
   width: 41px;
   height: 42px;
-  position: relative;
-  bottom: 7px;
-  left: 56px; }
+  margin-top: 5px;
+  margin-right: 16px; }
 
 .shopping {
   background-image: url(../icons/shopping-cart-primary.png);
   width: 41px;
   height: 42px;
-  position: relative;
-  bottom: 7px;
-  left: 90px;
-  border-radius: 50%; }
+  border-radius: 50%;
+  margin-top: 5px;
+  margin-right: 16px; }
 
 .logo-grability {
   background-image: url(../images/grability-logo.png);
