--- a/scss/CMA.scss
+++ b/scss/CMA.scss
@@ -1,6 +1,7 @@
 // * BASE
 @import "base/variables";
 @import "base/base";
+@import "base/mixins.scss";
 // * BLOCK
 @import "block/checkbox";
 @import "block/containers";
