--- a/app/styles/CMA.css
+++ b/app/styles/CMA.css
@@ -16,6 +16,10 @@ footer {
   position: relative;
   right: 63px;
   bottom: 30px; }
+  @media (max-width: 480px) {
+    .container-circule--image {
+      width: 100px;
+      height: 100px; } }
 
 .container-text--descrition {
   position: relative;
@@ -24,27 +28,61 @@ footer {
   width: 69%;
   height: 190px;
   text-align: justify; }
+  @media (max-width: 480px) {
+    .container-text--descrition {
+      left: 52px;
+      top: -117px; } }
 
 .container-text-relatedComics {
   position: relative;
   bottom: 196px;
   right: 14px;
   width: 311px; }
+  @media (max-width: 480px) {
+    .container-text-relatedComics {
+      width: 216px;
+      bottom: 103px; } }
+  @media (min-width: 481px) {
+    .container-text-relatedComics {
+      width: 100%;
+      bottom: 224px; } }
 
 .container-favorite {
-  min-height: 100% !important;
-  background: #ebebeb;
-  height: 100%;
-  padding: 0 0.75rem 100% 0.75rem !important; }
+  min-height: 100% !important; }
+  @media (min-width: 1200px) {
+    .container-favorite {
+      background: #ebebeb;
+      height: 100%;
+      padding: 0 0.75rem 100% 0.75rem !important; } }
 
-.container-card--character {
-  height: 340px;
-  background: white;
-  margin: 23px 0 0 0;
-  width: 40%;
-  float: left;
-  margin: 25px 0 30px 57px;
-  padding: 0px 13px; }
+@media (max-width: 480px) {
+  .container-card--character {
+    height: 440px;
+    background: white;
+    margin: 23px 0 0 0;
+    width: 74%;
+    margin: 60px 0 60px 50px;
+    padding: 0px 13px; } }
+@media (min-width: 481px) {
+  .container-card--character {
+    height: 340px;
+    background: white;
+    margin: 23px 0 0 0;
+    width: 74%;
+    padding: 0px 13px;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 60px;
+    margin-top: 60px; } }
+@media (min-width: 1200px) {
+  .container-card--character {
+    height: 340px;
+    background: white;
+    margin: 23px 0 0 0;
+    width: 40%;
+    float: left;
+    margin: 25px 0 30px 57px;
+    padding: 0px 13px; } }
 
 .container-filter--character {
   height: 61px; }
@@ -62,6 +100,18 @@ footer {
 .container-center {
   display: table;
   margin: 0 auto; }
+
+.add-favorite {
+  width: 211px; }
+  @media (max-width: 480px) {
+    .add-favorite {
+      width: 100%; } }
+
+.buy-comics {
+  width: 168px; }
+  @media (max-width: 480px) {
+    .buy-comics {
+      width: 100%; } }
 
 .container-favorite--title {
   margin-left: 3%; }
@@ -103,7 +153,8 @@ footer {
   height: 60px; }
 
 nav {
-  background: #2d2727 !important; }
+  background: #2d2727 !important;
+  height: 65px !important; }
 
 .input-search {
   background: #fff !important;
@@ -132,6 +183,10 @@ a.item.item-avatar {
   position: absolute;
   bottom: 42px;
   left: 150px; }
+  @media (max-width: 480px) {
+    .button-size {
+      top: 177px;
+      left: 58px; } }
 
 .btn-pagination {
   background: white;
@@ -177,6 +232,9 @@ button[disabled], html input[disabled] {
   font-size: 26px;
   margin: 16px 0 0 0;
   font-weight: 500; }
+  @media (max-width: 480px) {
+    .container-favorite p {
+      font-size: 20px; } }
 
 .footer-paragraph {
   margin: 0;
@@ -185,11 +243,28 @@ button[disabled], html input[disabled] {
 
 .container-comics--favorite .comics-read {
   background: black;
-  width: 80%;
-  height: 80%;
-  margin-left: 35px;
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  margin: 0 auto;
+  display: table; }
+  @media (max-width: 480px) {
+    .container-comics--favorite .comics-read {
+      width: 80%;
+      height: 25%; } }
+  @media (min-width: 481px) {
+    .container-comics--favorite .comics-read {
+      width: 80%;
+      height: 61%; } }
+  @media (min-width: 1200px) {
+    .container-comics--favorite .comics-read {
+      width: 100%;
+      height: 100%; } }
+@media (min-width: 1200px) {
+  .container-comics--favorite p {
+    font-size: 14px; } }
+@media (min-width: 1200px) {
+  .container-comics--favorite p {
+    font-size: 25px; } }
 
 .container-modal--content .comics-view {
   height: 250px;
@@ -197,11 +272,23 @@ button[disabled], html input[disabled] {
   float: left;
   margin: 0 27px;
   background: black; }
+  @media (max-width: 480px) {
+    .container-modal--content .comics-view {
+      height: 150px;
+      width: 120px;
+      background-size: cover; } }
+@media (max-width: 480px) {
+  .container-modal--content h4 {
+    font-size: 15px; } }
 .container-modal--content p {
   color: #786e6f;
   height: 161px;
   overflow-y: scroll;
   padding-right: 13px; }
+  @media (max-width: 480px) {
+    .container-modal--content p {
+      height: 185px;
+      padding-right: 0px; } }
 
 .container-button--modal .btn-modal {
   width: 50%;
@@ -217,6 +304,10 @@ button[disabled], html input[disabled] {
   .container-button--modal .btn-add p {
     color: black; }
 
+@media (max-width: 480px) {
+  .container-flex h4 {
+    font-size: 20px; } }
+
 .logo {
   background-image: url(../images/Marvel_Comics_logo.png);
   width: 140px;
@@ -224,6 +315,12 @@ button[disabled], html input[disabled] {
   background-size: contain;
   background-repeat: no-repeat;
   margin: 6px 0 0 19px; }
+  @media (max-width: 480px) {
+    .logo {
+      margin: 8px 0 0 0; } }
+  @media (min-width: 481px) {
+    .logo {
+      margin: 8px 0 0 0; } }
 
 i.material-icons.prefix {
   top: 0px;
@@ -239,6 +336,12 @@ i.material-icons.prefix.active {
   background-repeat: no-repeat;
   background-size: contain;
   margin-top: 13px; }
+  @media (max-width: 480px) {
+    .icon {
+      display: none; } }
+  @media (min-width: 481px) {
+    .icon {
+      display: block; } }
 
 .characters {
   background-image: url(../icons/characters.png);
@@ -272,5 +375,12 @@ i.material-icons.prefix.active {
   width: 50px;
   height: 50px;
   margin: 0; }
+
+@media (max-width: 480px) {
+  .brand-logo {
+    left: 95px !important; } }
+@media (min-width: 481px) {
+  .brand-logo {
+    left: 95px !important; } }
 
 /*# sourceMappingURL=CMA.css.map */
