--- a/scss/block/containers.scss
+++ b/scss/block/containers.scss
@@ -16,6 +16,10 @@ footer{
     position: relative;
     right: 63px;
     bottom: 30px;
+    @include breakpoint(mobileonly) {
+      width: 100px;
+      height: 100px;
+    }
 }
 .container-text--descrition {
     position: relative;
@@ -24,20 +28,54 @@ footer{
     width: 69%;
     height: 190px;
     text-align: justify;
+    @include breakpoint(mobileonly) {
+      left: 52px;
+      top: -117px;
+    }
 }
 .container-text-relatedComics {
     position: relative;
     bottom: 196px;
     right: 14px;
     width: 311px;
+    @include breakpoint(mobileonly) {
+      width: 216px;
+      bottom: 103px;
+    }
+    @include breakpoint(phablet) {
+      width: 100%;
+      bottom: 224px;
+    }
 }
 .container-favorite{
     min-height: 100% !important;
-    background: $gray-semi-ligth;
-    height: 100%;
-    padding: 0 0.75rem 100% 0.75rem !important;
+    @include breakpoint(laptop) {
+      background: $gray-semi-ligth;
+      height: 100%;
+      padding: 0 0.75rem 100% 0.75rem !important;
+    }
 }
 .container-card--character{
+  @include breakpoint(mobileonly) {
+    height: 440px;
+    background: white;
+    margin: 23px 0 0 0;
+    width: 74%;
+    margin: 60px 0 60px 50px;
+    padding: 0px 13px;
+  }
+  @include breakpoint(phablet) {
+    height: 340px;
+    background: white;
+    margin: 23px 0 0 0;
+    width: 74%;
+    padding: 0px 13px;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 60px;
+    margin-top: 60px;
+  }
+  @include breakpoint(laptop) {
     height: 340px;
     background: white;
     margin: 23px 0 0 0;
@@ -45,6 +83,7 @@ footer{
     float: left;
     margin: 25px 0 30px 57px;
     padding: 0px 13px;
+  }
 }
 .container-filter--character {
     height: 61px;
@@ -63,6 +102,18 @@ footer{
 .container-center {
   display: table;
   margin: 0 auto;
+}
+.add-favorite {
+  width: 211px;
+  @include breakpoint(mobileonly) {
+    width: 100%;
+  }
+}
+.buy-comics {
+  width: 168px;
+  @include breakpoint(mobileonly) {
+    width: 100%;
+  }
 }
 .container-favorite--title {
     margin-left: 3%;
