--- a/scss/element/container-items.scss
+++ b/scss/element/container-items.scss
@@ -33,6 +33,9 @@
     font-size: 26px;
     margin: 16px 0 0 0;
     font-weight: 500;
+    @include breakpoint(mobileonly) {
+      font-size: 20px;
+    }
   }
 }
 .footer-paragraph {
@@ -42,30 +45,60 @@
 }
 .container-comics--favorite {
     .comics-read {
-        background: black;
+      background: black;
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin: 0 auto;
+      display: table;
+      @include breakpoint(mobileonly) {
         width: 80%;
-        height: 80%;
-        margin-left: 35px;
-        background-repeat: no-repeat;
-        background-size: cover;
+        height: 25%;
+      }
+      @include breakpoint(phablet) {
+        width: 80%;
+        height: 61%;
+      }
+      @include breakpoint(laptop) {
+        width: 100%;
+        height: 100%;
+      }
     }
     p {
-
+      @include breakpoint(laptop) {
+        font-size: 14px;
+      }
+      @include breakpoint(laptop) {
+        font-size: 25px;
+      }
     }
 }
 .container-modal--content {
   .comics-view {
-      height: 250px;
-      width: 190px;
-      float: left;
-      margin: 0 27px;
-      background: black;
+    height: 250px;
+    width: 190px;
+    float: left;
+    margin: 0 27px;
+    background: black;
+    @include breakpoint(mobileonly) {
+      height: 150px;
+      width: 120px;
+      background-size: cover;
+    }
+  }
+  h4 {
+    @include breakpoint(mobileonly) {
+      font-size: 15px;
+    }
   }
   p {
     color: $gray;
     height: 161px;
     overflow-y: scroll;
     padding-right: 13px;
+    @include breakpoint(mobileonly) {
+      height: 185px;
+      padding-right: 0px;
+    }
   }
 }
 .container-button--modal {
@@ -89,5 +122,11 @@
         color: black;
       }
   }
-
+}
+.container-flex {
+  h4 {
+    @include breakpoint(mobileonly) {
+      font-size: 20px;
+    }
+  }
 }
