--- a/scss/base/variables.scss
+++ b/scss/base/variables.scss
@@ -4,3 +4,4 @@ $gray-semi-ligth: #ebebeb;
 $gray: #786e6f;
 $red: #ec1d23;
 $white: #fff;
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One');
