--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,21 @@
-<div ng-include="'views/header.html'"></div>
+<nav class="grey-darken">
+   <div class="nav-wrapper">
+     <div class="row">
+       <div class="col m3 s5">
+         <a href="#" class="brand-logo"><div class="logo">
+         </div></a>
+       </div>
+       <div class="input-field col s6">
+          <input placeholder="Search" id="first_name" type="text" class="validate input-search" ng-model="searchText">
+          <i class="material-icons prefix">search</i>
+        </div>
+       <div class="col m3 s0">
+       </div>
+     </div>
+      </div>
+   </div>
+ </nav>
+
  <div class="row no-margins">
    <div class="col s9">
      <div class="row container-filter--character">
